--- a/index.html
+++ b/index.html
@@ -1,1 +1,103 @@
-
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Bildergalerie von Amer El-Erwadi</title>
+  <meta name="description" content="Bildergalerie von Amer El-Erwadi zur besseren Erfassung durch Google." />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+      background: #f9f9f9;
+      color: #222;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+      gap: 1rem;
+    }
+    .gallery figure {
+      margin: 0;
+      background: white;
+      padding: 0.5rem;
+      border-radius: 8px;
+      box-shadow: 0 0 5px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .gallery img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 5px;
+    }
+    .gallery figcaption {
+      margin-top: 0.5rem;
+      font-size: 0.9rem;
+      color: #555;
+    }
+  </style>
+</head>
+<body>
+  <h1>Bildergalerie von Amer El-Erwadi</h1>
+  <section class="gallery">
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/AMER-EL-ERWADI-PORTRAIT-2023.jpg" alt="Amer El-Erwadi Portrait 2023" />
+      <figcaption>Portrait von Amer El-Erwadi, 2023</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-Achtsam-Morden-2024.jpg" alt="Amer El-Erwadi in Achtsam Morden 2024" />
+      <figcaption>Amer El-Erwadi in der Serie Achtsam Morden, 2024</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-Bitten-Soon-Cover-2025.jpg" alt="Amer El-Erwadi Bitten Soon Cover 2025" />
+      <figcaption>Cover für Bitten Soon, 2025</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-Cosi-Fan-Tutte.jpeg" alt="Amer El-Erwadi Cosi Fan Tutte" />
+      <figcaption>Amer El-Erwadi bei Cosi Fan Tutte</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-Dune-Part-Two-Premiere-Schweiz.jpeg" alt="Amer El-Erwadi Dune Part Two Premiere Schweiz" />
+      <figcaption>Premiere von Dune Part Two in der Schweiz</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-Dune-Part-Two.jpeg" alt="Amer El-Erwadi in Dune Part Two" />
+      <figcaption>Amer El-Erwadi in Dune Part Two</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-Fullbody-2023.jpeg" alt="Amer El-Erwadi Fullbody 2023" />
+      <figcaption>Fullbody-Foto von Amer El-Erwadi, 2023</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-NL-Zeitungsartikel-tatort-2026.jpeg" alt="Amer El-Erwadi NL Zeitungsartikel Tatort 2026" />
+      <figcaption>Zeitungsartikel zu Tatort mit Amer El-Erwadi, 2026</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-Photo-Halfshot-2023.jpg" alt="Amer El-Erwadi Photo Halfshot 2023" />
+      <figcaption>Halbporträt von Amer El-Erwadi, 2023</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-Portrait-2024.jpg" alt="Amer El-Erwadi Portrait 2024" />
+      <figcaption>Portrait von Amer El-Erwadi, 2024</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-Portrait-Cannes-2025.jpg" alt="Amer El-Erwadi Portrait Cannes 2025" />
+      <figcaption>Portrait von Amer El-Erwadi auf dem Festival in Cannes, 2025</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-Pumpen-2023.jpg" alt="Amer El-Erwadi in Pumpen 2023" />
+      <figcaption>Amer El-Erwadi in der Serie Pumpen, 2023</figcaption>
+    </figure>
+    <figure>
+      <img src="https://raw.githubusercontent.com/amerelerwadi/sitemap/main/images/Amer-El-Erwadi-Schwarze-Schafe-2025.jpg" alt="Amer El-Erwadi Schwarze Schafe 2025" />
+      <figcaption>Amer El-Erwadi in Schwarze Schafe, 2025</figcaption>
+    </figure>
+  </section>
+</body>
+</html>
