--- a/index.html
+++ b/index.html
@@ -99,5 +99,6 @@
       <figcaption>Amer El-Erwadi in Schwarze Schafe, 2025</figcaption>
     </figure>
   </section>
+  <a href="film.html">Filmografie</a>
 </body>
 </html>
